Fix horizontal scroll bug with full padding on .container

--- a/public/layout.css
+++ b/public/layout.css
@@ -11,12 +11,14 @@ html, body, uiview {
 }
 
 .container {
-	min-height: 100vh;
+	height: 100vh;
+	overflow: auto;
 	width: calc(100vw - calc(var(--containerPadding) * 2));
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin: 0;
+	padding: 0 var(--containerPadding);
 }
 
 [data-is-touchscreen=true] .container {
